src/themes/huraga/assets/scss/huraga.scss
@use "flags";

:root {
    --bs-primary: #005fc5;
    --bs-primary-rgb: 0, 95, 197;
    --bs-primary-text-emphasis: #00264f;
    --bs-primary-bg-subtle: #ccdff3;
    --bs-primary-border-subtle: #99bfe8;
    --bs-warning: #f59e0b;
    --bs-warning-rgb: 245, 158, 11;
    --bs-warning-text-emphasis: #623f04;
    --bs-warning-bg-subtle: #fdecce;
    --bs-warning-border-subtle: #fbd89d;
    --bs-danger: #dc2626;
    --bs-danger-rgb: 220, 38, 38;
    --bs-danger-text-emphasis: #580f0f;
    --bs-danger-bg-subtle: #f8d4d4;
    --bs-danger-border-subtle: #f1a8a8;
    --bs-body-bg: #f5f5f5;
    --bs-body-bg-rgb: 245, 245, 245;
    --bs-accordion-active-bg: rgba(var(--bs-primary-rgb), 0.05);
    --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-primary-rgb), 0.08);
}

html,
body {
    width: 100%;
    height: 100%;
}

body {
    font-family: Verdana, sans-serif;
}

.fs-7 {
    font-size: .875rem;
}

.offcanvas-item {
    border-bottom: 1px rgba(#000, .1) solid;

    &:first-child {
        border-top: 1px rgba(#000, .1) solid;
    }

    &:hover {
        background: #fafafa;
    }

    >a {
        color: var(--bs-secondary);
    }
}

.card-header h1, .page-password-reset .card h1, .page-login .card h1, .page-signup .card h1 {
    font-size: 1.25rem;
}

.card-body {
    @at-root table {
        >thead {
            >tr {
                >th {
                    font-size: 0.765625rem;
                    color: var(--bs-secondary);
                    font-weight: 600;
                    text-transform: uppercase;
                }
            }
        }

        >tbody {
            >tr {
                >td {
                    vertical-align: middle;
                }
            }
        }
    }
}

.svg-icon {
    height: 20px;
    width: 20px;
    fill: currentColor;
}

// Remove order management accordion icons
#orderManager {
    --bs-accordion-btn-icon: none;
    --bs-accordion-btn-active-icon: none;
}

// TomSelect dropdown
.ts-input {
    color: inherit;
}

.ts-wrapper {
    &.form-select {
        background-color: inherit;
    }

    .ts-control {
        font-size: 14px;
        width: 100%;
        color: inherit;

        &.locale {
            width: 205px;
        }

        .dropdown-menu {
            width: 100%;
            height: auto;
        }
    }

    .ts-dropdown {
        font-size: 14px;

        .active {
            background-color: rgba(var(--bs-secondary-rgb), 0.06);
            color: inherit;
        }

        .selected {
            background-color: rgba(var(--bs-secondary-rgb), 0.1);
        }
    }
}

@media (max-width: 768px) {
    .ts-wrapper.js-language-selector {
        width: 180px
    }
}

.invoice-gateway {
    border: 1px solid var(--bs-border-color);

    &:hover {
        border: 1px solid var(--bs-primary);
    }
}

.email-list {
    border-radius: 0;

    .list-group-item {
        border: 0;
        border-bottom: 1px solid var(--bs-border-color);
        border-left: 2px solid transparent;

        &.active {
            border-left: 2px solid var(--bs-primary-border-subtle);
            background: rgba(var(--bs-primary-rgb), 0.1);
            color: var(--bs-dark);
        }
    }
}

// TODO: Add custom color themes to Huraga. Bootstrap has a great example here: https://getbootstrap.com/docs/5.3/customize/color-modes/#custom-color-modes

